[package]
name = "joycontrolrs"
version = "0.1.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

[dependencies]
# For getting bluetooth devices
blurz = "0.4.0"
# For connecting to raw bluetooth socket
libbluetooth = "0.1.0"
libc = "0.2"
# For setting bluetooth profile
dbus = "0.8"
uuid = { version = "0.8", features = ["v4"] }
# For Async
smol = "0.1"
futures = "0.3.4"
# For generic nums
num-traits = { version = "0.2", default-features = false }
