[package]
name = "intiface-console-game-haptics-router"
version = "0.1.0"
authors = ["Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2018"

[dependencies]
# For getting bluetooth devices
blurz = "0.4.0"
# For connecting to raw bluetooth socket
libbluetooth = "0.1.0"
libc = "0.2"
# For setting bluetooth profile
dbus = "0.8"
uuid = { version = "0.8", features = ["v4"] }
# For Async
smol = "0.1"
futures = "0.3.4"
# For generic nums
num-traits = { version = "0.2", default-features = false }
# Additions for GHR
buttplug = {version = "0.4.0", features=["async_std_runtime"]}
async-channel = "1.1.1"
